# Lox-Tutorial

CLox/: CMakeLists.txt  chunk.c  chunk.h  clox.c  common.h  compiler.c  compiler.h  debug.c  debug.h  global.c  global.h  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
CLox/utils/: stringUtils.c
Lox Scripts/: classTest.lox
Utils/Benchmark/: lox_clock.py  main.py
Utils/Benchmark/results/: ClassInit_20260427_205921.txt  ClassInit_20260429_203044.txt  ClassInit_20260429_214412.txt
Utils/Benchmark/scripts/: ClassInit.lox
